--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -680,7 +680,7 @@
       "#\n",
       "#     $ conda deactivate\n",
       "\n",
-      "\u001B[91m\n",
+      "\u001b[91m\n",
       "\n",
       "==> WARNING: A newer version of conda exists. <==\n",
       "  current version: 4.7.12\n",
@@ -691,7 +691,7 @@
       "    $ conda update -n base -c defaults conda\n",
       "\n",
       "\n",
-      "\u001B[0mWARNING: /root/.conda/pkgs does not exist\n",
+      "\u001b[0mWARNING: /root/.conda/pkgs does not exist\n",
       "Removing intermediate container 532fecebc0c2\n",
       " ---> fec1adf0c4b5\n",
       "Step 9/15 : ENV PATH /azureml-envs/azureml_b12824a0eee159365ccfe3146b58a1cd/bin:$PATH\n",
@@ -1211,9 +1211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'p' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-f40ea53b2606>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m published_pipeline = p.publish(\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Diabetes_Training_Pipeline'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mdescription\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"Trains diabetes model\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mversion\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"1.0\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'p' is not defined"
+     ]
+    }
+   ],
    "source": [
     "published_pipeline = p.publish(\n",
     "    name='Diabetes_Training_Pipeline',\n",
