--- a/05-Creating_a_Pipeline.ipynb
+++ b/05-Creating_a_Pipeline.ipynb
@@ -1272,8 +1272,8 @@
     "experiment_name = 'Run-diabetes-pipeline'\n",
     "\n",
     "response = requests.post(\n",
-    "    rest_endpoint, \n",
-    "    headers=auth_header, \n",
+    "    rest_endpoint,\n",
+    "    headers=auth_header,\n",
     "    json={\"ExperimentName\": experiment_name},\n",
     ")\n",
     "run_id = response.json()[\"Id\"]\n",
@@ -1288,7 +1288,7 @@
     "\n",
     "> **Note**: The pipeline should complete quickly, because each step was configured to allow output reuse. This was done primarily for convenience and to save time in this example. In reality, you'd likely want the first step to run every time in case the data has changed, and trigger the subsequent steps only if the output from step one changes.\n",
     ">\n",
-    "> The widget may not refresh quickly enough to indicate that the pipeline run has completed - keep an eye on the kernel indicator at the top right of the page, when it turns from **&#9899;** to **&#9711;**, the code has finished running."
+    "> The widget may not refresh quickly enough to indicate that the pipeline run has completed - keep an eye on the kernel indicator at the top right of the page, when it turns from ⚫ to ◯, the code has finished running."
    ]
   },
   {
@@ -1297,11 +1297,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.pipeline.core.run import PipelineRun\n",
-    "from azureml.widgets import RunDetails\n",
-    "\n",
-    "published_pipeline_run = PipelineRun(ws.experiments[experiment_name], run_id)\n",
-    "RunDetails(published_pipeline_run).show()\n",
+    "published_pipeline_run = pipeline.core.run.PipelineRun(\n",
+    "    ws.experiments[experiment_name], run_id\n",
+    ")\n",
+    "widgets.RunDetails(published_pipeline_run).show()\n",
     "pipeline_run.wait_for_completion()"
    ]
   },
