--- a/12-Monitoring_a_Model.ipynb
+++ b/12-Monitoring_a_Model.ipynb
@@ -21,15 +21,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.core import Workspace\n",
-    "\n",
-    "# Load the workspace from the saved config file\n",
+    "import json\n",
+    "import os\n",
+    "import joblib as joblib\n",
+    "import requests\n",
+    "from azureml.core import Workspace, Dataset, Experiment\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from azureml.core.conda_dependencies import CondaDependencies\n",
+    "from azureml.core.model import InferenceConfig, Model\n",
+    "from azureml.core.webservice import AciWebservice\n",
+    "from sklearn import model_selection, metrics\n",
+    "from sklearn.tree import DecisionTreeClassifier\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ready to work with workspace\n"
+     ]
+    }
+   ],
+   "source": [
     "ws = Workspace.from_config()\n",
-    "print('Ready to work with', ws.name)"
+    "print('Ready to work with', ws.name)\n"
    ]
   },
   {
@@ -47,92 +72,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uploading an estimated of 2 files\n",
+      "Uploading ./data/diabetes.csv\n",
+      "Uploading ./data/diabetes2.csv\n",
+      "Uploaded ./data/diabetes.csv, 1 files out of an estimated total of 2\n",
+      "Uploaded ./data/diabetes2.csv, 2 files out of an estimated total of 2\n",
+      "Uploaded 2 files\n",
+      "Creating dataset...\n",
+      "Registering dataset...\n",
+      "Starting experiment: diabetes-training\n",
+      "Loading Data...\n",
+      "Training a decision tree model\n",
+      "Accuracy: 0.8975555555555556\n",
+      "AUC: 0.8827569166900401\n",
+      "Registering model...\n",
+      "Model trained and registered.\n"
+     ]
+    }
+   ],
    "source": [
-    "from azureml.core import Experiment\n",
-    "from azureml.core import Model\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import joblib\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import roc_curve\n",
-    "from azureml.core import Dataset\n",
-    "\n",
-    "# Upload data files to the default datastore\n",
     "default_ds = ws.get_default_datastore()\n",
-    "default_ds.upload_files(files=['./data/diabetes.csv', './data/diabetes2.csv'],\n",
-    "                       target_path='diabetes-data/',\n",
-    "                       overwrite=True,\n",
-    "                       show_progress=True)\n",
+    "default_ds.upload_files(\n",
+    "    ['./data/diabetes.csv', './data/diabetes2.csv'],\n",
+    "    target_path='diabetes-data/',\n",
+    "    overwrite=True,\n",
+    ")\n",
     "\n",
-    "#Create a tabular dataset from the path on the datastore\n",
     "print('Creating dataset...')\n",
-    "data_set = Dataset.Tabular.from_delimited_files(path=(default_ds, 'diabetes-data/*.csv'))\n",
+    "data_set = Dataset.Tabular.from_delimited_files(\n",
+    "    (default_ds, 'diabetes-data/*.csv')\n",
+    ")\n",
     "\n",
-    "# Register the tabular dataset\n",
     "print('Registering dataset...')\n",
-    "try:\n",
-    "    data_set = data_set.register(workspace=ws, \n",
-    "                               name='diabetes dataset',\n",
-    "                               description='diabetes data',\n",
-    "                               tags = {'format':'CSV'},\n",
-    "                               create_new_version=True)\n",
-    "except Exception as ex:\n",
-    "    print(ex)\n",
+    "data_set = data_set.register(\n",
+    "    ws, 'diabetes dataset', description='diabetes data',\n",
+    "    tags = {'format':'CSV'}, create_new_version=True\n",
+    ")\n",
     "\n",
-    "# Create an Azure ML experiment in your workspace\n",
-    "experiment = Experiment(workspace = ws, name = \"diabetes-training\")\n",
+    "experiment = Experiment(ws, 'diabetes-training')\n",
     "run = experiment.start_logging()\n",
-    "print(\"Starting experiment:\", experiment.name)\n",
+    "print('Starting experiment:', experiment.name)\n",
     "\n",
-    "# load the diabetes dataset\n",
-    "print(\"Loading Data...\")\n",
-    "diabetes = data_set.to_pandas_dataframe()\n",
+    "print('Loading Data...')\n",
+    "diabetes: pd.DataFrame = data_set.to_pandas_dataframe()\n",
     "\n",
-    "# Separate features and labels\n",
-    "X, y = diabetes[['Pregnancies','PlasmaGlucose','DiastolicBloodPressure','TricepsThickness','SerumInsulin','BMI','DiabetesPedigree','Age']].values, diabetes['Diabetic'].values\n",
+    "X = diabetes[\n",
+    "        [\n",
+    "            'Pregnancies', 'PlasmaGlucose', 'DiastolicBloodPressure',\n",
+    "            'TricepsThickness', 'SerumInsulin', 'BMI', 'DiabetesPedigree',\n",
+    "            'Age',\n",
+    "        ]\n",
+    "    ].to_numpy()\n",
+    "y = diabetes['Diabetic'].to_numpy()\n",
     "\n",
-    "# Split data into training set and test set\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=0)\n",
+    "X_train, X_test, y_train, y_test = model_selection.train_test_split(\n",
+    "    X, y, test_size=0.30, random_state=0\n",
+    ")\n",
     "\n",
-    "# Train a decision tree model\n",
     "print('Training a decision tree model')\n",
     "model = DecisionTreeClassifier().fit(X_train, y_train)\n",
     "\n",
-    "# calculate accuracy\n",
     "y_hat = model.predict(X_test)\n",
     "acc = np.average(y_hat == y_test)\n",
     "print('Accuracy:', acc)\n",
-    "run.log('Accuracy', np.float(acc))\n",
+    "run.log('Accuracy', acc)\n",
     "\n",
-    "# calculate AUC\n",
     "y_scores = model.predict_proba(X_test)\n",
-    "auc = roc_auc_score(y_test,y_scores[:,1])\n",
-    "print('AUC: ' + str(auc))\n",
-    "run.log('AUC', np.float(auc))\n",
+    "auc = metrics.roc_auc_score(y_test,y_scores[:,1])\n",
+    "print('AUC:', auc)\n",
+    "run.log('AUC', auc)\n",
     "\n",
-    "# Save the trained model\n",
     "model_file = 'diabetes_model.pkl'\n",
-    "joblib.dump(value=model, filename=model_file)\n",
-    "run.upload_file(name = 'outputs/' + model_file, path_or_stream = './' + model_file)\n",
+    "joblib.dump(model, model_file)\n",
+    "run.upload_file('outputs/' + model_file, './' + model_file)\n",
     "\n",
-    "# Complete the run\n",
     "run.complete()\n",
     "\n",
-    "# Register the model\n",
     "print('Registering model...')\n",
-    "run.register_model(model_path='outputs/diabetes_model.pkl', model_name='diabetes_model',\n",
-    "                   tags={'Training context':'Inline Training'},\n",
-    "                   properties={'AUC': run.get_metrics()['AUC'], 'Accuracy': run.get_metrics()['Accuracy']})\n",
+    "run.register_model(\n",
+    "    'diabetes_model', model_path='outputs/diabetes_model.pkl',\n",
+    "    tags={'Training context':'Inline Training'},\n",
+    "    properties={\n",
+    "        'AUC': run.get_metrics()['AUC'], \n",
+    "        'Accuracy': run.get_metrics()['Accuracy']\n",
+    "    }\n",
+    ")\n",
     "\n",
-    "# Get the registered model\n",
     "model = ws.models['diabetes_model']\n",
     "\n",
-    "print('Model trained and registered.')"
+    "print('Model trained and registered.')\n"
    ]
   },
   {
@@ -148,15 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "diabetes-service\n"
+     ]
+    }
+   ],
    "source": [
-    "import os\n",
-    "\n",
-    "folder_name = 'diabetes_service'\n",
+    "folder_name = 'diabetes-service'\n",
     "os.makedirs(folder_name, exist_ok=True)\n",
-    "print(folder_name)"
+    "print(folder_name)\n"
    ]
   },
   {
@@ -168,40 +209,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting diabetes-service/score_diabetes.py\n"
+     ]
+    }
+   ],
    "source": [
     "%%writefile $folder_name/score_diabetes.py\n",
     "import json\n",
     "import joblib\n",
     "import numpy as np\n",
     "from azureml.core.model import Model\n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "# Called when the service is loaded\n",
+    "model: LogisticRegression\n",
+    "\n",
+    "\n",
     "def init():\n",
+    "    \"\"\"\n",
+    "    Initialize `model`\n",
+    "    \"\"\"\n",
     "    global model\n",
-    "    # Get the path to the deployed model file and load it\n",
     "    model_path = Model.get_model_path('diabetes_model')\n",
     "    model = joblib.load(model_path)\n",
     "\n",
-    "# Called when a request is received\n",
+    "\n",
     "def run(raw_data):\n",
-    "    # Get the input data as a numpy array\n",
+    "    \"\"\"\n",
+    "    Score `model`\n",
+    "    \"\"\"\n",
     "    data = json.loads(raw_data)['data']\n",
     "    np_data = np.array(data)\n",
-    "    # Get a prediction from the model\n",
     "    predictions = model.predict(np_data)\n",
-    "    # print the data and predictions (so they'll be logged!)\n",
-    "    log_text = 'Data:' + str(data) + ' - Predictions:' + str(predictions)\n",
+    "    log_text = f'Data: {data} - Predictions: {predictions}'\n",
     "    print(log_text)\n",
-    "    # Get the corresponding classname for each prediction (0 or 1)\n",
     "    classnames = ['not-diabetic', 'diabetic']\n",
     "    predicted_classes = []\n",
     "    for prediction in predictions:\n",
     "        predicted_classes.append(classnames[prediction])\n",
-    "    # Return the predictions as JSON\n",
-    "    return json.dumps(predicted_classes)"
+    "    return json.dumps(predicted_classes)\n"
    ]
   },
   {
@@ -213,27 +265,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved dependency info in diabetes-service/diabetes_env.yml\n"
+     ]
+    }
+   ],
    "source": [
-    "from azureml.core.conda_dependencies import CondaDependencies \n",
-    "\n",
-    "# Add the dependencies for our model (AzureML defaults is already included)\n",
     "myenv = CondaDependencies()\n",
     "myenv.add_conda_package(\"scikit-learn\")\n",
     "\n",
-    "# Save the environment config as a .yml file\n",
     "env_file = folder_name + \"/diabetes_env.yml\"\n",
     "with open(env_file,\"w\") as f:\n",
     "    f.write(myenv.serialize_to_string())\n",
-    "print(\"Saved dependency info in\", env_file)\n",
-    "\n",
-    "# Print the .yml file\n",
-    "with open(env_file,\"r\") as f:\n",
-    "    print(f.read())"
+    "print(\"Saved dependency info in\", env_file)\n"
    ]
   },
   {
@@ -247,29 +299,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running......................................\n",
+      "Succeeded\n",
+      "ACI service creation operation finished, operation \"Succeeded\"\n",
+      "Healthy\n"
+     ]
+    }
+   ],
    "source": [
-    "from azureml.core.webservice import AciWebservice, Webservice\n",
-    "from azureml.core.model import Model\n",
-    "from azureml.core.model import InferenceConfig\n",
-    "\n",
-    "# Configure the scoring environment\n",
-    "inference_config = InferenceConfig(runtime= \"python\",\n",
-    "                                   source_directory = folder_name,\n",
-    "                                   entry_script=\"score_diabetes.py\",\n",
-    "                                   conda_file=\"diabetes_env.yml\")\n",
+    "inference_config = InferenceConfig(\n",
+    "    f'score_diabetes.py', runtime='python', conda_file='diabetes_env.yml',\n",
+    "    source_directory = folder_name,\n",
+    ")\n",
     "\n",
     "service_name = \"diabetes-service-app-insights\"\n",
-    "deployment_config = AciWebservice.deploy_configuration(cpu_cores = 1, memory_gb = 1)\n",
-    "aci_service = Model.deploy(workspace=ws,\n",
-    "                           name= service_name,\n",
-    "                           models= [model],\n",
-    "                           inference_config= inference_config,\n",
-    "                           deployment_config=deployment_config)\n",
+    "deployment_config = AciWebservice.deploy_configuration(\n",
+    "    cpu_cores = 1, memory_gb = 1\n",
+    ")\n",
+    "aci_service = Model.deploy(\n",
+    "    ws, service_name, [model],\n",
+    "    inference_config= inference_config, deployment_config=deployment_config\n",
+    ")\n",
     "aci_service.wait_for_deployment(show_output = True)\n",
-    "print(aci_service.state)"
+    "print(aci_service.state)\n"
    ]
   },
   {
@@ -283,14 +342,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Healthy\n",
+      "AppInsights enabled!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Enable AppInsights\n",
     "aci_service.update(enable_app_insights=True)\n",
     "print(aci_service.state)\n",
-    "print('AppInsights enabled!')"
+    "print('AppInsights enabled!')\n"
    ]
   },
   {
@@ -306,15 +373,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Healthy\n",
+      "http://d5c06dcd-2e65-408f-806b-8d1841fc82ad.westus.azurecontainer.io/score\n"
+     ]
+    }
+   ],
    "source": [
-    "#while aci_service.state == 'Transitioning':\n",
-    "#    pass\n",
     "print(aci_service.state)\n",
     "endpoint = aci_service.scoring_uri\n",
-    "print(endpoint)"
+    "print(endpoint)\n"
    ]
   },
   {
@@ -328,32 +402,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "Patient [2, 180, 74, 24, 21, 23.9091702, 1.488172308, 22] diabetic\n",
+      "Patient [0, 148, 58, 11, 179, 39.19207553, 0.160829008, 45] not-diabetic\n"
+     ]
+    }
+   ],
    "source": [
-    "import requests\n",
-    "import json\n",
-    "\n",
-    "# Create new data for inferencing\n",
     "x_new = [[2,180,74,24,21,23.9091702,1.488172308,22],\n",
     "         [0,148,58,11,179,39.19207553,0.160829008,45]]\n",
     "\n",
-    "# Convert the array to a serializable list in a JSON document\n",
     "input_json = json.dumps({\"data\": x_new})\n",
     "\n",
-    "# Set the content type\n",
     "headers = { 'Content-Type':'application/json' }\n",
     "\n",
-    "# Get the predictions\n",
     "predictions = requests.post(endpoint, input_json, headers = headers)\n",
     "print(predictions.status_code)\n",
     "if predictions.status_code == 200:\n",
     "    predicted_classes = json.loads(predictions.json())\n",
     "    for i in range(len(x_new)):\n",
-    "        print (\"Patient {}\".format(x_new[i]), predicted_classes[i] )"
+    "        print (f'Patient {x_new[i]}', predicted_classes[i] )\n"
    ]
   },
   {
@@ -393,7 +470,7 @@
    "outputs": [],
    "source": [
     "aci_service.delete()\n",
-    "print('Service deleted.')"
+    "print('Service deleted.')\n"
    ]
   },
   {
@@ -424,5 +501,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
